correct dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,17 @@ label:focus {
 #toggle:checked + .menu {
   display: block;
 }
+
+.email-container {
+  margin: 70px auto 50px auto;
+  width: 100%;
+  text-align: center;
+  background-color: #12173F;
+  border-radius: 15px;
+  padding: 20px;
+  transition: all 2s ease-in-out;
+}
+
 }
 
 
@@ -98,8 +109,8 @@ h1 {
   color: #12173F;
 }
 
-p.aboutContent {
-  background-color: rgba(190,212,233, 0.3);
+.aboutContent {
+  background-color: blue;
   padding: 20px;
   border-radius: 15px;
 }
@@ -114,13 +125,13 @@ container {
   display: inline;
 }
 
-div.background-image {
-  background-image: url("https://www.nba.com/grizzlies/sites/grizzlies/files/confetti-ex-white-bg.jpg");
+.background-image {
+  background-image: url("");
   height: 100%;
   background-attachment: fixed;
 }
 
-div.player {
+.player {
   display: inline-block;
   padding: 10px 20px 0px 20px;
   margin: 10px 10px 10px 10px;
@@ -198,13 +209,17 @@ form .submit:hover {
 
 /* DARK MODE */
 @media (prefers-color-scheme: dark) {
+
+  body {
+    background-color: #000;
+  }
   
-  p.aboutContent {
+  .aboutContent {
     background-color: #707271;
     color: white;
   }
 
-  div.player {
+  .player {
     background-color: #12173F;
     color: white;
     border-bottom: 5px solid #F5B112;
@@ -217,5 +232,14 @@ form .submit:hover {
   .player img {
     border-bottom: 5px solid #F5B112;
   }
+}
+
+
+body.dark-theme {
+  background-color: #000;
+}
+
+body.dark-theme .aboutContent {
+  background-color: green;
 }
 /* END DARK MODE */
